--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,13 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+.main-container {
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  gap: 10px;
+  padding: 10px;
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
